<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/toplayout"></include>

    <com.lottery.biying.view.SwipeHeader
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dip"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/servicer" />

                <RadioGroup
                    android:id="@+id/radiogroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:divider="@color/topbagcolor"
                    android:orientation="vertical">

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:button="@null"
                        android:drawableLeft="@drawable/qq"
                        android:drawablePadding="20dp"
                        android:text="@string/qq"
                        android:textSize="13sp" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1px"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/topbagcolor"></View>

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:button="@null"
                        android:drawableLeft="@drawable/weixin"
                        android:drawablePadding="20dp"
                        android:text="@string/weixin"
                        android:textSize="13sp" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1px"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/topbagcolor"></View>

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:button="@null"
                        android:drawableLeft="@drawable/phone"
                        android:drawablePadding="20dp"
                        android:text="@string/phone"
                        android:textSize="13sp" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1px"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/topbagcolor"></View>

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:button="@null"
                        android:drawableLeft="@drawable/email"
                        android:drawablePadding="20dp"
                        android:text="@string/email"
                        android:textSize="13sp" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1px"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/topbagcolor"></View>
                </RadioGroup>

                <TextView
                    android:id="@+id/contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dip"
                    android:background="@drawable/btn_conner_noradiu_loss"
                    android:gravity="center"
                    android:padding="10dip"
                    android:text="@string/contactoffice"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

        </ScrollView>
    </com.lottery.biying.view.SwipeHeader>
</LinearLayout>
