<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray12"
    android:orientation="vertical">

    <include layout="@layout/toplayout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="20dip">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/bankinfo"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/withdraw_bank"
                    android:textColor="@color/gray20"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/bank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:textColor="@color/gray20"
                    android:textSize="14sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bankname"
                    android:textColor="@color/gray20"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/bankname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:textColor="@color/gray20"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bank_account"
                    android:textColor="@color/gray20"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/banknumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:textColor="@color/gray20"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="开户地址:"
                    android:textColor="@color/gray20"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/bankaddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:textColor="@color/gray20"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout1"
            android:layout_marginTop="10dip"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circle_loess4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:text="@string/withdraw_money"
                    android:textColor="@color/gray19"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/jine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="right"
                    android:inputType="number"
                    android:padding="5dip"
                    android:text=""
                    android:textSize="14sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="5dip"
                android:background="@color/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circle_loess4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:text="@string/withdraw_password"
                    android:textColor="@color/gray19"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/mima"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="right"
                    android:inputType="numberPassword"
                    android:maxLength="4"
                    android:padding="5dip"
                    android:singleLine="true"
                    android:textSize="14sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="5dip"
                android:background="@color/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_marginBottom="10dip"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/warn" />

                <TextView
                    android:id="@+id/notice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="10dip"
                    android:drawablePadding="5dip"
                    android:gravity="left"
                    android:text="提款金额5W之内3分钟内火速到账"
                    android:textColor="@color/gray8"
                    android:textSize="13sp" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/comit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout2"
            android:layout_marginTop="20dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@drawable/btn_conner_noradiu_loss"
            android:gravity="center"
            android:padding="10dip"
            android:text="@string/confirmwithdraw"
            android:textColor="@color/white" />

    </RelativeLayout>
</LinearLayout>
