<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:gravity="center|left"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_loess4"
            />
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="@string/oldpassword"
            android:textSize="15sp"
            />
        <EditText
            android:id="@+id/oldpassword"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:padding="10dip"
            android:layout_marginLeft="10dip"
            android:textSize="13sp"
            android:gravity="right"
            android:hint="请输入旧密码 "
            android:singleLine="true"
            android:maxLength="16"
            android:password="true"
            android:inputType="textAutoComplete"
            android:digits="0987654321qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM"
            />
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:background="@color/line"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:gravity="center|left"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_loess4"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="@string/newpassword"
            android:textSize="15sp"
            />
        <EditText
            android:id="@+id/newpassword"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:layout_marginLeft="10dip"
            android:textSize="13sp"
            android:gravity="right"
            android:hint="请输入6-16位英文字母以及数字组合"
            android:maxLength="16"
            android:singleLine="true"
            android:password="true"
            android:inputType="textAutoComplete"
            android:digits="0987654321qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM"
            />
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:background="@color/line"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:gravity="center|left"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_loess4"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="确认新密码"
            android:textSize="15sp"
            />
        <EditText
            android:id="@+id/confirmpassword"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:layout_marginLeft="10dip"
            android:textSize="13sp"
            android:gravity="right"
            android:hint="请输入确认新密码"
            android:singleLine="true"
            android:maxLength="16"
            android:password="true"
            android:inputType="textAutoComplete"
            android:digits="0987654321qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM"
            />
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:background="@color/line"
        />


        <TextView
            android:id="@+id/confirmmodify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="20dip"
            android:padding="10dip"
            android:gravity="center"
            android:background="@drawable/btn_conner_noradiu_loss"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:text="@string/confirmmodify"
            />
</LinearLayout>
